; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_ipr.c_ipr_log_vpd_compact.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_ipr.c_ipr_log_vpd_compact.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ipr_hostrcb = type { i32 }
%struct.ipr_vpd = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }

@IPR_VENDOR_ID_LEN = common dso_local global i32 0, align 4
@IPR_PROD_ID_LEN = common dso_local global i32 0, align 4
@IPR_SERIAL_NUM_LEN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [16 x i8] c"%s VPID/SN: %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.ipr_hostrcb*, %struct.ipr_vpd*)* @ipr_log_vpd_compact to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ipr_log_vpd_compact(i8* %0, %struct.ipr_hostrcb* %1, %struct.ipr_vpd* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.ipr_hostrcb*, align 8
  %6 = alloca %struct.ipr_vpd*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store %struct.ipr_hostrcb* %1, %struct.ipr_hostrcb** %5, align 8
  store %struct.ipr_vpd* %2, %struct.ipr_vpd** %6, align 8
  %10 = load i32, i32* @IPR_VENDOR_ID_LEN, align 4
  %11 = load i32, i32* @IPR_PROD_ID_LEN, align 4
  %12 = add nsw i32 %10, %11
  %13 = load i32, i32* @IPR_SERIAL_NUM_LEN, align 4
  %14 = add nsw i32 %12, %13
  %15 = add nsw i32 %14, 3
  %16 = zext i32 %15 to i64
  %17 = call i8* @llvm.stacksave()
  store i8* %17, i8** %7, align 8
  %18 = alloca i8, i64 %16, align 16
  store i64 %16, i64* %8, align 8
  store i32 0, i32* %9, align 4
  %19 = load %struct.ipr_vpd*, %struct.ipr_vpd** %6, align 8
  %20 = getelementptr inbounds %struct.ipr_vpd, %struct.ipr_vpd* %19, i32 0, i32 1
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* @IPR_VENDOR_ID_LEN, align 4
  %24 = call i32 @memcpy(i8* %18, i32 %22, i32 %23)
  %25 = load i32, i32* @IPR_VENDOR_ID_LEN, align 4
  %26 = sub nsw i32 %25, 1
  %27 = call i32 @strip_and_pad_whitespace(i32 %26, i8* %18)
  store i32 %27, i32* %9, align 4
  %28 = load i32, i32* %9, align 4
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds i8, i8* %18, i64 %29
  %31 = load %struct.ipr_vpd*, %struct.ipr_vpd** %6, align 8
  %32 = getelementptr inbounds %struct.ipr_vpd, %struct.ipr_vpd* %31, i32 0, i32 1
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = load i32, i32* @IPR_PROD_ID_LEN, align 4
  %36 = call i32 @memcpy(i8* %30, i32 %34, i32 %35)
  %37 = load i32, i32* %9, align 4
  %38 = load i32, i32* @IPR_PROD_ID_LEN, align 4
  %39 = add nsw i32 %37, %38
  %40 = sub nsw i32 %39, 1
  %41 = call i32 @strip_and_pad_whitespace(i32 %40, i8* %18)
  store i32 %41, i32* %9, align 4
  %42 = load i32, i32* %9, align 4
  %43 = sext i32 %42 to i64
  %44 = getelementptr inbounds i8, i8* %18, i64 %43
  %45 = load %struct.ipr_vpd*, %struct.ipr_vpd** %6, align 8
  %46 = getelementptr inbounds %struct.ipr_vpd, %struct.ipr_vpd* %45, i32 0, i32 0
  %47 = load i32, i32* %46, align 4
  %48 = load i32, i32* @IPR_SERIAL_NUM_LEN, align 4
  %49 = call i32 @memcpy(i8* %44, i32 %47, i32 %48)
  %50 = load i32, i32* @IPR_SERIAL_NUM_LEN, align 4
  %51 = load i32, i32* %9, align 4
  %52 = add nsw i32 %50, %51
  %53 = sext i32 %52 to i64
  %54 = getelementptr inbounds i8, i8* %18, i64 %53
  store i8 0, i8* %54, align 1
  %55 = load %struct.ipr_hostrcb*, %struct.ipr_hostrcb** %5, align 8
  %56 = load i8*, i8** %4, align 8
  %57 = call i32 @ipr_hcam_err(%struct.ipr_hostrcb* %55, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i8* %56, i8* %18)
  %58 = load i8*, i8** %7, align 8
  call void @llvm.stackrestore(i8* %58)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @memcpy(i8*, i32, i32) #2

declare dso_local i32 @strip_and_pad_whitespace(i32, i8*) #2

declare dso_local i32 @ipr_hcam_err(%struct.ipr_hostrcb*, i8*, i8*, i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
